Enhance testing configuration and update Makefile for MCP integration
- Updated TESTFOLDER in Makefile to include 'mcp' for comprehensive testing coverage.
- Added environment variables for MCP client configuration in both pr-test.yml and unit-test.yml workflows.
- Configured fetcher-mcp service in CI workflows to facilitate testing of MCP functionalities.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -56,6 +56,12 @@ env:
   NEO4J_TEST_USER: "neo4j"
   NEO4J_TEST_PASS: "Yao2026Neo4j"
 
+  MCP_CLIENT_TEST_HTTP_URL: "http://localhost:3090/mcp"
+  MCP_CLIENT_TEST_HTTP_AUTHORIZATION_TOKEN: "Bearer 123456"
+  MCP_CLIENT_TEST_SSE_URL: "http://localhost:3090/sse"
+  MCP_CLIENT_TEST_SSE_AUTHORIZATION_TOKEN: "Bearer 123456"
+
+
 jobs:
   unit-test:
     runs-on: ubuntu-latest
@@ -80,6 +86,13 @@ jobs:
           - "7687:7687"
         env:
           NEO4J_AUTH: neo4j/Yao2026Neo4j
+
+      fetcher-mcp:
+        image: ghcr.io/jae-jae/fetcher-mcp:latest
+        ports:
+          - "3090:3000"
+        env:
+          NODE_ENV: production
 
     strategy:
       matrix:
