--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -38,6 +38,7 @@ env:
   MONGO_TEST_PASS: "123456"
 
   OPENAI_TEST_KEY: ${{ secrets.OPENAI_TEST_KEY }}
+  ANTHROPIC_TEST_KEY: "sk-ant-test-placeholder"
   RAG_LLM_TEST_URL: ${{ secrets.RAG_LLM_TEST_URL }}
   RAG_LLM_TEST_KEY: ${{ secrets.RAG_LLM_TEST_KEY }}
   RAG_LLM_TEST_SMODEL: ${{ secrets.RAG_LLM_TEST_SMODEL }}
